welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:14: error: type mismatch;
 found   : Unit
 required: Boolean
        if(a<19) {
        ^loneTeen:13: error: type mismatch;
 found   : Unit
 required: Boolean
      if(a<13) {
      ^loneTeen:12: error: type mismatch;
 found   : Unit
 required: Boolean
    if(b<=19) {
    ^loneTeen:11: error: type mismatch;
 found   : Unit
 required: Boolean
  if(b>=13) {
  ^