welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
  if(a>=13) {
    if(a<=19) {
      if(b<13) {
        if(b<19) {
          return true
        }
      }
    }
  }
  if(b>=13) {
    if(b<=19) {
      if(a<13) {
        if(a<19) {
          return true
        }
      }
    }
  }
}
  